Remove scrollbar fix due to an error
https://github.com/AkazaRenn/No-More-Sidebar-in-Mastodon-4.0/issues/1
It also causes clicking the button does not going back to top of the view.
Highly possibly related to the react JS code it uses, which may not be solved by this project.

--- a/standalone.css
+++ b/standalone.css
@@ -27,20 +27,10 @@
 		overflow-x: hidden;
 	}
 }
-
 .ui__header__logo {
 	width: 0 !important;
 	padding: 0 !important;
 }
 .navigation-panel__logo {
 	display: none !important;
-}
-body.app-body.layout-single-column {
-	overflow-y: hidden !important;
-}
-.columns-area--mobile .column, .columns-area--mobile .drawer { 
-	overflow-y: auto !important; 
-}
-.columns-area__panels__main { 
-	max-height: 100vh !important; 
 }
